# f451-store

./: .cookiecutter.json  .flake8  .gitignore  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: attribs.rst  conf.py  config_files.rst  conventions.rst  demo.rst  index.rst  installation.rst  logging.rst  quickstart.rst  reference.rst  requirements.rst  requirements.txt  retrieve_data.rst  store_data.rst  usage.rst
src/f451_store/: __init__.py  __main__.py  config.ini.example  constants.py  entity.py  exceptions.py  processor.py  secrets.ini.example  store.py  utils.py
src/f451_store/providers/: csv.py  json.py  mysql.py  provider.py  sql.py  sqlite.py  txt.py
tests/: __init__.py  conftest.py  test_entity.py  test_main.py  test_store.py  test_utils.py
tests/providers/: test_csv.py  test_json.py  test_mysql.py  test_sqlite.py
